[tool.poetry]
name = "reinforcementlearning"
version = "0.1.0"
description = ""
authors = ["Nikita Borisov <nik-everyday@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.26.2"
torchrl = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

